# minirpc

./: .gitignore  CHANGES  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  connection.c  event.c  init.c  internal.h  message.c  minirpc.pc.in  minirpc.x  minirpcgen.in  minirpcgen.pl  pollset.c  pollset_epoll.c  pollset_poll.c  selfpipe.c  serialize.c  util.c  xdr_len.c
doc/: .gitignore  Doxyfile  Makefile.am  common.dox  example.dox  example.mx  example_client.h  example_minirpc.h  example_server.h  example_xdr.h  main.dox
example/: Makefile.am  client.c  example_client.c  example_server.c  server.c  test.mx
lib/: Makefile.am  config.c  connection.c  event.c  internal.h  message.c  minirpc.x  pollset.c  pollset_epoll.c  pollset_impl.h  pollset_poll.c  reftrack.c  selfpipe.c  serialize.c  util.c  xdr_len.c
minirpc/: Makefile.am  connection.c  event.c  hash.h  internal.h  list.h  message.c  minirpc.h  minirpc.h.in  minirpc_protocol.h  minirpcgen.pl  protocol.h  serialize.c  xdr_len.c
minirpc/minirpc/: hash.h  minirpc.h  protocol.h
minirpc/test/: .gitignore  Makefile.am  client.c  server.c  test.mx
protocol/: .gitignore  Makefile.am  compile.pl  compile.sh  connection.c  genattributes.pl  genflow.pl  hash.h  internal.h  list.h  message.c  messenger.c  minirpc.h  minirpc.x  minirpc_protocol.h  minirpcgen.pl  mux.c  openisr.mx  protocol.asn  protocol.h  sample-client.c  sample-client.h  serialize.c  stubgen.pl  xdr_len.c
protocol/classes/: .gitignore  Makefile.am
protocol/support/: .gitignore  Makefile.am
protocol/test/: Makefile.am  client.c  server.c
rpclib/: .gitignore  Makefile.am  openisr.x
test/: .gitignore  Makefile.am  client.c  client_async.c  client_sync.c  common.c  common.h  proto.mx  runtest.sh  runtest.sh.in  server.c  server_async.c  server_sync.c  test.mx  test_001_basic.c  test_accept_close.c  test_async_both.c  test_async_client.c  test_async_server.c  test_basic.c  test_bind_fd.c  test_dispatch.c  test_errors.c  test_fd_limit.c  test_max_buf.c  test_plug.c  test_protocol_err.c  test_refcount.c  test_sequential_clients.c  test_set_ops.c  test_shutdown.c  test_simultaneous_clients.c  test_simultaneous_close.c  test_throughput.c  test_unix.c  valgrind.supp
